k8/authd.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: auth-v1 # point this to desired deployment
  ports:
    - port: 5000
      name: api
    - port: 9090
      name: metrics
  type: ClusterIP
---
#apiVersion: monitoring.coreos.com/v1
#kind: ServiceMonitor
#metadata:
#  name: auth
#  labels:
#    app: auth
#spec:
#  endpoints:
#    - port: metrics
#  selector:
#    matchLabels:
#      app: auth
#---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-01
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-v1
  template:
    metadata:
      labels:
        app: auth-v1
    spec:
      containers:
        - name: auth
          image: textile/auth
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 5000
            - name: metrics
              containerPort: 9090
          resources:
            requests:
              memory: 100Mi
              cpu: "0.6"
            limits:
              memory: 1Gi
