k8/bidbot.yaml
apiVersion: v1
kind: Service
metadata:
  name: bidbot
spec:
  selector:
    app: bidbot-v1 # point this to desired deployment
  ports:
    - port: 5000
      name: api
    - port: 9090
      name: metrics
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: bidbot-swarm
spec:
  selector:
    app: bidbot-v1 # point this to desired deployment
  ports:
    - port: 4001
      name: swarm
  type: LoadBalancer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bidbot-01
  labels:
    app: bidbot
spec:
  serviceName: bidbot
  replicas: 0
  selector:
    matchLabels:
      app: bidbot-v1
  template:
    metadata:
      labels:
        app: bidbot-v1
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 2000
      terminationGracePeriodSeconds: 10
      containers:
        - name: bidbot
          image: "textile/bidbot:sha-206629e"
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 5000
            - name: metrics
              containerPort: 9090
          volumeMounts:
            - name: bidbot-store
              mountPath: /data/bidbot
          resources:
            requests:
              memory: 2Gi
              cpu: "1"
            limits:
              memory: 4Gi
  volumeClaimTemplates:
    - metadata:
        name: bidbot-store
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
